# meccai

./: .env.example  .gitignore  .pre-commit-config.yaml  ATLASSIAN_SSO_CONFIG.md  CLAUDE.md  Makefile  README.md  USAGE.md  diagnose_atlassian_auth.py  lumos  pyproject.toml  requirement.txt  test_lumos_agents.py
config/: base.yaml  bedrock.yaml  dev.yaml  logging.yaml  prod.yaml
config/mcp/: cursor.mcp.json  endpoints.yaml
deploy/bedrock/: deploy.md
docker/: Dockerfile
docs/: lumos-system.md
exports/: tableau_users_20250822_230016.csv  tableau_users_top100.csv  test_export_20250822_225441.csv  test_users_20250822_225541.csv  users_export_20250822_223743.csv
meccaai/: __init__.py
meccaai/adapters/: __init__.py
meccaai/adapters/bedrock/: __init__.py  bedrock_agents.py  bedrock_runner.py
meccaai/adapters/openai_sdk/: __init__.py  runner.py  tool_adapter.py
meccaai/apps/: __init__.py  gradio_app.py  lumos_agents.py  lumos_app.py  lumos_bedrock_agents.py  lumos_bedrock_app.py  openai_app.py
meccaai/core/: __init__.py  cloudwatch_logger.py  config.py  conversation_logger.py  logging.py  mcp_client.py  mcp_tool_base.py  tool_base.py  tool_registry.py  types.py
meccaai/prompts/: __init__.py  atlassian.md  dbt.md  loader.py  snowflake.md  tableau.md  zapier.md
meccaai/tools/: __init__.py  atlassian_tools.py  cortex_agent_tools.py  dbt_tools.py  export_tools.py  security_tools.py  self_intro.py  tableau_tools.py  zapier_tools.py
scripts/: setup.py  test_cloudwatch_limits.py
tests/: archive_test_atlassian_tools.py  archive_test_tableau_filters.py  debug_content_usage.py  launch_ui_test.py  start_fixed_ui.py  test_agent_sync.py  test_complete_fix.py  test_content_usage.py  test_detailed_response.py  test_final_usage.py  test_fixed_usage_api.py  test_gradio_ui.py  test_lumos_system.py  test_no_selector_ui.py  test_tableau_functions.py  test_tableau_question.py  test_tableau_usage_direct.py  test_thinking_flow.py  test_tools.py  test_ui_fixed.py  test_usage_api_formats.py  test_usage_through_ui.py  test_workbook_usage_workflow.py  test_workbooks_only.py  usage_example.py  verify_tableau_pagination.py  verify_ui_elements.py  workbook_usage_analysis.py
(+12 files in other folders)
